[gd_scene load_steps=6 format=2]

[ext_resource path="res://tiles/svgs/green_field.svg" type="Texture" id=1]
[ext_resource path="res://scripts/Tile.gd" type="Script" id=2]
[ext_resource path="res://tiles/pngs/hover_tile.png" type="Texture" id=3]
[ext_resource path="res://tiles/pngs/selected_tile.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 35.0359

[node name="Tile" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="HoverSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="SelectionSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="InnerArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InnerArea2D"]
shape = SubResource( 1 )
[connection signal="input_event" from="InnerArea2D" to="." method="_on_InnerArea2D_input_event"]
[connection signal="mouse_entered" from="InnerArea2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="InnerArea2D" to="." method="_on_Area2D_mouse_exited"]
